--- a/Frontend/src/app/ui/bill/bill-list/bill-list.component.html
+++ b/Frontend/src/app/ui/bill/bill-list/bill-list.component.html
@@ -5,25 +5,25 @@
             <h3>Purchase History</h3>
             <table class="table">
                 <tbody>
-                    <tr *ngFor="let bill of allBills">
+                    <tr *ngFor="let bill of allBills; let itr = index;">
                         <td>
                         <button 
                             type="button" 
                             class="btn btn-outline-dark w-100"
                             data-toggle="collapse" 
                             
-                            attr.data-target="#bill{{ bill.billId }}">
-                            <span class="float-left " style="font-weight: bold ;">Bill Id: {{ bill.billId }}</span>
-                            <span class="float-middle " style="font-weight: bold ;">Date: {{ bill.billDate }}</span>
-                            <span class="float-right " style="font-weight: bold ;">Amount: Rs. {{ bill.billAmount }}</span>
+                            attr.data-target="#bill{{ itr }}">
+                            <span class="float-left " style="font-weight: bold ;">Bill Id: {{ allorderIds[itr] }}</span>
+                            <!-- <span class="float-middle " style="font-weight: bold ;">Date: {{ bill.billDate }}</span>
+                            <span class="float-right " style="font-weight: bold ;">Amount: Rs. {{ bill.billAmount }}</span> -->
                         </button>
                        
-                        <div class="collapse"   id="bill{{ bill.billId }}">
+                        <div class="collapse" id="bill{{ itr }}">
                             <div class="row mt-3">
                                 <div class="col">
                                     <div class="row mt-2">
                                         <div class="col">
-                                            <h1>Bill{{ bill.billId }}</h1>
+                                            <h1>Bill{{ itr }}</h1>
                                         </div>
                                     </div>
                                     <div class="row">
@@ -39,19 +39,19 @@
                                         </div>
                                         <div class="col-6">
                                             <div class="float-right">
-                                            Buyer Name: {{ currentBuyer?.buyerUsername  }}
+                                            Buyer Name: 
                                             </div>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="col-6">
                                             <div class="float-left">
-                                            Date: {{ bill.billDate }}
+                                            Date:  
                                             </div>
                                         </div>
                                         <div class="col-6">
                                             <div class="float-right">
-                                            Buyer Id: {{ currentBuyer?.buyerId }}
+                                            Buyer Id: 
                                         </div>
                                         </div>
                                     </div>
@@ -69,19 +69,20 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr *ngFor="let billDetails of bill.allBillDetails">
-                                            <td>{{ billDetails.item.itemId }}</td>
+                                        <tr *ngFor="let billDetails of bill">
+                                            <td>adfasdfd</td>
+                                            <!-- <td>{{ billDetails.item.itemId }}</td>
                                             <td>{{ billDetails.item.itemName }}</td>
                                             <td>1</td>
                                             <td>Rs. {{ billDetails.item.itemPrice }}</td>
-                                            <td>Rs. {{ billDetails.item.itemPrice }}</td>
+                                            <td>Rs. {{ billDetails.item.itemPrice }}</td> -->
                                         </tr>
                                         <tr>
                                             <td></td>
                                             <td></td>
                                             <td></td>
                                             <td><h5>Total:</h5></td>
-                                            <td>Rs. {{ bill.billAmount }}</td>
+                                            <td>Rs. </td>
                                         </tr>
                                     </tbody>
                                 </table>
